--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,19 @@
+@import "tailwindcss";
+
 * {
     box-sizing: border-box !important;
 }
 
 .section1 {
     background-color: #fcf951;
-    /* height: 100vh; */
+    height: 100vh;
+    width: 100% !important;
+}
+
+#section2 {
+    background-color: red;
+    height: 500px;
+    width: 100% !important;
 }
 
 /* Header Start */
