--- a/src/index.css
+++ b/src/index.css
@@ -6,14 +6,16 @@
 
 .section1 {
     background-color: #fcf951;
-    height: 100vh;
-    width: 100% !important;
+    width: 100%;
+
 }
 
+
 #section2 {
-    background-color: red;
-    height: 500px;
+    background-color: black;
+    height: 100vh;
     width: 100% !important;
+    /* z-index: 9999; */
 }
 
 /* Header Start */
