--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,34 @@
 
 * {
     box-sizing: border-box !important;
+
 }
 
 .section1 {
     background-color: #fcf951;
     width: 100%;
-
+    /* height: 100vh !important; */
+    /* background-image: url("./assets/Image/backgroundColor.png"); */
+    /* background-attachment: fixed !important; */
+    /* background-size: cover; */
+    /* background-position: center; */
 }
 
+.bg-fixed {
+    background-attachment: fixed !important;
+}
+
+/* 
+.sticky {
+    position: sticky;
+    z-index: -1;
+    top: 0;
+}
+
+
+.overlay {
+    z-index: 9999 !important;
+} */
 
 #section2 {
     background-color: black;
@@ -53,11 +73,11 @@
     color: black;
 }
 
-/* style={{ backgroundColor: "#fcf951", borderRadius: "25px", cursor: 'pointer' }}
-style={{ backgroundColor: "#fcf951", borderRadius: "25px", cursor: 'pointer' }}
-style={{ backgroundColor: "#fcf951", borderRadius: "25px", cursor: 'pointer' }}
-style={{ backgroundColor: "#fcf951", borderRadius: "25px", cursor: 'pointer' }}
-style={{ backgroundColor: "#fcf951", borderRadius: "25px", cursor: 'pointer' }} */
+/* Section two */
+.section2 {
+    overflow-x: hidden;
+}
+
 /* Media Query */
 
 @media (max-width: 576px) {
