--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,12 @@
 
 * {
     box-sizing: border-box !important;
-
 }
 
 .section1 {
     /* background-color: #fcf951; */
     background-color: #62ccd6cc;
+
 }
 
 .bg-fixed {
@@ -19,13 +19,13 @@
     background-color: black;
     height: 150vh !important;
     width: 100% !important;
-    /* z-index: 9999; */
-    /* overflow-y: hidden; */
+    overflow-y: hidden;
 }
 
 /* Header Start */
 .header {
     position: relative !important;
+    /* background-color: #06d69ed3; */
 }
 
 .modal-content {
@@ -38,6 +38,12 @@
     padding: 0% !important;
     /* margin-top: 55% !important; */
     margin-top: 35% !important;
+    overflow: auto;
+    z-index: 1000 !important;
+}
+
+.modal-backdrop {
+    position: static !important;
 }
 
 .childNavContent {
@@ -45,6 +51,7 @@
     border-radius: 25px;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
+    z-index: 1000 !important;
 
     &:hover {
         background-color: wheat;
