--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@
     /* height: 150vh !important; */
     width: 100% !important;
     overflow-y: hidden;
+    height: fit-content !important;
 }
 
 /* Header Start */
