--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,20 @@
 
 }
 
+
+#circle {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    background-color: #E3E3E3;
+    right: 0%;
+    bottom: 0%;
+
+    /* border: 2px solid black; */
+    z-index: 99999999 !important;
+
+}
+
 .bg-fixed {
     background-attachment: fixed !important;
 }
